@@ -1,0 +1,4 @@
+This tests for a crash when the fragment contains only an interchange newline.
+
+
+
